add change password route, edit account info route, get current user route. Add role property for users